--- a/Treinamento_Matplotlib.ipynb
+++ b/Treinamento_Matplotlib.ipynb
@@ -6,7 +6,8 @@
       "name": "Treinamento Matplotlib v3",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNjR8LSB5ewtz4qW7eBWscT"
+      "authorship_tag": "ABX9TyOxZLGt3B52byFdfD6tu4nB",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -19,12 +20,22 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/joceliovieira/treinamento_data_viz/blob/main/Treinamento_Matplotlib.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "source": [
         "Universidade Federal da Paraíba\n",
         "# Treinamento **Matplotlib**\n",
         "Autor: Eng° Jocélio Vieira (jocelio.vieira@cear.ufpb.br) - Membro Smart Grid Group (UFPB)\n",
         "\n",
-        "> Notebook dedicado à exposição e demonstração de funcionalidades da biblioteca Matplotlib.\n",
+        "Notebook dedicado à exposição e demonstração de funcionalidades da biblioteca Matplotlib.\n",
         "\n",
         "---\n",
         "\n",
