--- a/Treinamento_Matplotlib.ipynb
+++ b/Treinamento_Matplotlib.ipynb
@@ -3,10 +3,10 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Treinamento Matplotlib v3",
+      "name": "Treinamento Matplotlib",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOxZLGt3B52byFdfD6tu4nB",
+      "authorship_tag": "ABX9TyNfgU5UzptCeIugKSyTEnQd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -775,10 +775,13 @@
       "cell_type": "markdown",
       "source": [
         "### Customização de uma Figura/Gráfico\n",
-        "Fonte: https://matplotlib.org/stable/tutorials/introductory/usage.html\n",
         "\n",
         "Elementos de uma figura podem ser customizados.\n",
-        "<img src=\"https://matplotlib.org/stable/_images/anatomy.png\" width=\"700\"/>\n"
+        "\n",
+        "\n",
+        "<img src=\"https://matplotlib.org/stable/_images/anatomy.png\" width=\"700\"/>\n",
+        "\n",
+        "Fonte: https://matplotlib.org/stable/tutorials/introductory/usage.html"
       ],
       "metadata": {
         "id": "dhH6_IlfSo9d"
